...

    static var typeDisplayRepresentation: TypeDisplayRepresentation = "Event Type"

    static var caseDisplayRepresentations: [EventTypeOption: DisplayRepresentation] = [
        .generic: "Generic",
        .deadline: "Deadline",
        .exam: "Exam",
        .interview: "Interview",
        .trip: "Trip",
    ]

    var eventType: EventType {
        switch self {
...
